Fix double scrollbar
[MAILPOET-5262]

--- a/mailpoet/assets/css/src/components-plugin/_landingpage.scss
+++ b/mailpoet/assets/css/src/components-plugin/_landingpage.scss
@@ -25,7 +25,7 @@
 
   .landing-footer {
     @include full-width-background($color-grey-0);
-    margin: 0 auto -35px;
+    margin: 0 auto;
     max-width: 900px;
     padding: $content-padding;
     position: relative;
